# langchain-fde-curriculum

./: .env.example  .gitignore  README.md  pyproject.toml
phase0/: README.md  hello_agent.py
phase1/: README.md  agent.py
phase2/: README.md  agent.py
phase3/: README.md  agent.py  mcp_server.py
tests/: test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py
